# libcuckoo

./: .gitignore  CMakeLists.txt  Ideas  Makefile.am  README.md  annotated.html  annotated.js  annotated_dup.js  bucket__container_8hh_source.html  city_8cc_source.html  city_8h_source.html  city__hasher_8hh.html  city__hasher_8hh_source.html  class_city_hasher-members.html  class_city_hasher.html  class_city_hasher.js  class_city_hasher_3_01std_1_1string_01_4-members.html  class_city_hasher_3_01std_1_1string_01_4.html  class_city_hasher_3_01std_1_1string_01_4.js  class_default_hasher-members.html  class_default_hasher.html  class_default_hasher.js  class_global_hazard_pointer_list-members.html  class_global_hazard_pointer_list.html  class_global_hazard_pointer_list.js  class_partial_keys-members.html  class_partial_keys.html  class_partial_keys.js  class_partial_keys_3_01true_01_4-members.html  class_partial_keys_3_01true_01_4.html  class_partial_keys_3_01true_01_4.js  classb__queue-members.html  classb__queue.html  classb__queue.js  classcuckoohash__map-members.html  classcuckoohash__map.html  classcuckoohash__map.js  classcuckoohash__map_1_1const__iterator-members.html  classcuckoohash__map_1_1const__iterator.html  classcuckoohash__map_1_1const__iterator.js  (+198 more)
cityhash-1.1.1/: Makefile.in  compile  config.h.in  config.sub  configure  test-driver
cityhash-1.1.1/m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
cityhash-1.1.1/src/: Makefile.in  city.cc
doxygen/: Doxyfile
examples/: CMakeLists.txt  Makefile.am  c_hash.c  count_freq.cc  deleter_or_insert.cc  erase_fn.cc  find_fn.cc  hellohash.cc  hellohash_c.c  int_str_table.cc  int_str_table.h  nested_table  nested_table.cc
examples/cityhash/: CMakeLists.txt  Makefile.in  config.guess  configure  depcomp  install-sh  ltmain.sh  missing
examples/cityhash/src/: CMakeLists.txt  Makefile.in  city-test.cc  city.cc  city.h  citycrc.h
hooks/: pre-commit
libcuckoo/: CMakeLists.txt  Makefile.am  Makefile.in  bucket_container.hh  city.cc  city_hasher.hh  cuckoohash_config.h  cuckoohash_config.hh  cuckoohash_map.hh  cuckoohash_util.h  cuckoohash_util.hh  lazy_array.hh  libcuckoo_bucket_container.hh  libcuckoo_lazy_array.hh  libcuckoo_lock_array.hh  mainpage.dox
libcuckoo-c/: CMakeLists.txt  cuckoo_table_template.cc  cuckoo_table_template.h
mvs/: staticlib_libcuckoo.sln
mvs/benchmarks_insert_throughput/: benchmarks_insert_throughput.vcxproj  benchmarks_insert_throughput.vcxproj.filters
mvs/benchmarks_read_insert_throughput/: benchmarks_read_insert_throughput.vcxproj  benchmarks_read_insert_throughput.vcxproj.filters
mvs/benchmarks_read_throughput/: benchmarks_read_throughput.vcxproj  benchmarks_read_throughput.vcxproj.filters
mvs/examples_count_freq/: examples_count_freq.vcxproj  examples_count_freq.vcxproj.filters
mvs/examples_hellohash/: examples_hellohash.vcxproj  examples_hellohash.vcxproj.filters
mvs/examples_nested_table/: examples_nested_table.vcxproj  examples_nested_table.vcxproj.filters
mvs/staticlib_cityhash/: config.h  staticlib_cityhash.vcxproj  staticlib_cityhash.vcxproj.filters
mvs/staticlib_libcuckoo/: dummy.cpp  staticlib_libcuckoo.vcxproj  staticlib_libcuckoo.vcxproj.filters
mvs/stress-tests/: stress-tests.vcxproj  stress-tests.vcxproj.filters
mvs/stress-tests_unchecked/: stress-tests_unchecked.vcxproj  stress-tests_unchecked.vcxproj.filters
mvs/test_cityhash/: test_cityhash.vcxproj  test_cityhash.vcxproj.filters
mvs/unit_tests/: unit_tests.vcxproj  unit_tests.vcxproj.filters
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_63.js  all_64.js  all_65.js  all_66.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6f.js  all_7.js  all_72.js  all_73.js  all_75.js  all_76.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_62.js  classes_63.js  classes_67.js  (+58 more)
src/: Makefile.am  city_hasher.hh  cuckoohash_config.h  cuckoohash_config.hh  cuckoohash_map.hh  cuckoohash_util.hh  lazy_array.hh
testing-framework/: arguments.json  configuration.py  gather_results.py  keys.json  plot.ipynb  run_benchmarks.py  tables.json
tests/: CMakeLists.txt  Makefile.am  config.h.in  configure.ac  insert_throughput.cc  read_throughput.cc  stress_checked.cc  stress_unchecked.cc  test_bracket_operator.cc  test_insert_and_find.cc  test_iterator.cc  test_util.cc  test_util.hh
tests/Catch/: CMakeLists.txt
tests/benchmarks/: Makefile.am  benchmark-driver.sh  chrono.h  insert_throughput.cc  read_insert_throughput.cc  read_throughput.cc  universal_benchmark.cc  universal_gen.hh  universal_table_wrapper.hh
tests/json/: CMakeLists.txt
tests/pcg/: CMakeLists.txt  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
tests/specific-benchmarks/: CMakeLists.txt  insert_throughput.cc  read_insert_throughput.cc  read_throughput.cc
tests/stress-tests/: CMakeLists.txt  Makefile.am  stress_checked.cc  stress_unchecked.cc
tests/unit-tests/: CMakeLists.txt  Makefile.am  acutest.h  test_bracket_operator.cc  test_bucket_container.cc  test_bucket_container.h  test_c_interface.cc  test_c_interface.h  test_constructor.cc  test_constructor.h  test_free_old_tables.cc  test_hash_properties.cc  test_hash_properties.h  test_heterogeneous_compare.cc  test_heterogeneous_compare.h  test_insert.cc  test_iterator.cc  test_iterator.h  test_libcuckoo_bucket_container.cc  test_locked_table.cc  test_locked_table.h  test_maximum_hashpower.cc  test_maximum_hashpower.h  test_minimum_load_factor.cc  test_minimum_load_factor.h  test_noncopyable_types.cc  test_noncopyable_types.h  test_resize.cc  test_resize.h  test_runner.cc  test_user_exceptions.cc  test_user_exceptions.h  unit_test_util.cc  unit_test_util.hh
tests/universal-benchmark/: CMakeLists.txt  README.md  universal_benchmark.cc  universal_gen.hh  universal_table_wrapper.hh
tests/universal-benchmark/plots/: plot.ipynb
