AM_CXXFLAGS=-I $(includedir)

noinst_PROGRAMS = test_insert_and_find.out test_iterator.out test_bracket_operator.out stress_checked.out stress_unchecked.out insert_throughput.out read_throughput.out
TESTS = test_insert_and_find.out test_iterator.out test_bracket_operator.out stress_checked.out stress_unchecked.out insert_throughput.out read_throughput.out

test_insert_and_find_out_SOURCES = test_insert_and_find.cc test_util.hh
test_iterator_out_SOURCES = test_iterator.cc test_util.hh
test_bracket_operator_out_SOURCES = test_bracket_operator.cc test_util.hh
stress_checked_out_SOURCES = stress_checked.cc test_util.hh
stress_unchecked_out_SOURCES = stress_unchecked.cc test_util.hh
insert_throughput_out_SOURCES = insert_throughput.cc test_util.hh
read_throughput_out_SOURCES = read_throughput.cc test_util.hh
