AM_CXXFLAGS = -g -O0

TESTS = test_runner.out
noinst_PROGRAMS = $(TESTS)
test_runner_out_SOURCES = \
	test_iterator.cc \
	test_bracket_operator.cc \
	test_resize.cc \
	test_constructor.cc \
	test_free_old_tables.cc \
	test_minimum_load_factor.cc \
	test_maximum_hashpower.cc \
	unit_test_util.cc \
	test_runner.cc catch.hpp
